recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:12: error: illegal start of simple pattern
for(var i = 0 <- 5 ){
    ^Spiral:24: error: '<-' expected but '}' found.
}
^